# novel-fsalm

./: .gitignore  CHANGELOG.md  CODE_OF_ETHICS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
docs/: ANSWERING_LOOP.md  ARTIFACTS.md  ARTIFACT_SYNC_V1.md  BRIDGE_EXPANSION.md  CACHES_V1.md  CHAT_FLOW_ACCEPTANCE.md  CLI.md  COMPACTION_V1.md  CONTEXT_ANCHORS_V1.md  CONVERSATION_PACK_V1.md  COPROCESSORS.md  DETERMINISM.md  EVIDENCE_BUILDER_V1.md  EVIDENCE_BUNDLE_V1.md  EVIDENCE_SET_V1.md  EXEMPLAR_MEMORY_V1.md  EXPANDED_QFV_V1.md  EXPANSION_BUDGET_V1.md  FORECAST_V1.md  FRAMES.md  FRAME_STORE.md  GOLDEN_PACK_CONVERSATION_V1.md  GOLDEN_PACK_TURN_PAIRS_V1.md  GOLDEN_PACK_V1.md  GRAPH_RELEVANCE_V1.md  HIT_LIST_V1.md  INDEX.md  INDEX_PACK_V1.md  INDEX_QUERY_V1.md  INDEX_SEGMENT_V1.md  INDEX_SIG_MAP_V1.md  INDEX_SNAPSHOT_V1.md  INGEST_WIKI.md  INGEST_WIKI_XML.md  INTERFACE.md  LEXICON.md  LEXICON_QUERY_EXPANSION.md  LEXICON_SEGMENTING_AND_MERGE_POLICY.md  LEXICON_SEGMENT_V1.md  LEXICON_SNAPSHOT_V1.md  (+46 more)
examples/: README.md  build_index_windows_cmd.txt  demo_cmd_build_evidence.bat  demo_cmd_build_evidence.sh  demo_cmd_build_lexicon_snapshot.bat  demo_cmd_build_lexicon_snapshot.sh  demo_cmd_build_markov_model.bat  demo_cmd_build_markov_model.sh  demo_cmd_compact_index.bat  demo_cmd_compact_index.sh  demo_cmd_compare_presentation.bat  demo_cmd_compare_presentation.sh  demo_cmd_frame_segment.bat  demo_cmd_golden_pack_conversation_v1.bat  demo_cmd_golden_pack_conversation_v1.sh  demo_cmd_golden_pack_turn_pairs_v1.bat  demo_cmd_golden_pack_turn_pairs_v1.sh  (+30 more)
(+178 files in other folders)
